Workload_Generator/sample-deployment-resources/app1/app1-m1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a1m1
  labels:
    app: a1m1
    service: a1m1
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: a1m1
