Workload_Generator/sample-deployment-resources/app1/app1-m2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a1m2
  labels:
    app: a1m2
    service: a1m2
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: a1m2
