Workload_Generator/sample-deployment-resources/app1/app1-m3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a1m3
  labels:
    app: a1m3
    service: a1m3
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: a1m3
