Workload_Generator/sample-deployment-resources/app1/app1-m1-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: a1m1
spec:
  hosts:
  - "a1m1.app1.svc.cluster.local"
  gateways:
  - app1-gateway
  http:
  - match:
    - uri:
        prefix: /DummyM/home
    - uri:
        prefix: /DummyM/getResults
    route:
    - destination:
        port:
          number: 8080
        host: a1m1
