Workload_Generator/sample-deployment-resources/app1/app1-m3-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app1-m3-dr
spec:
  host: "a1m3.app1.svc.cluster.local"
