Workload_Generator/sample-deployment-resources/app1/app1-m4-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app1-m4-dr
spec:
  host: "a1m4.app1.svc.cluster.local"
