Workload_Generator/sample-deployment-resources/app1/app1-m4-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: a1m4
spec:
  hosts:
  - "a1m4.app1.svc.cluster.local"
  http:
  - match:
    - uri:
        prefix: /DummyM/home
    - uri:
        prefix: /DummyM/getResults
    route:
    - destination:
        port:
          number: 8080
        host: a1m4
